external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-dns
spec:
  type: ExternalName
  externalName: www.google.com
  ports:
  - port: 80
