kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: port-80-service
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
