kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: kubia-nodeport
            servicePort: 80
        - path: /foo
          backend:
            serviceName: foo
            servicePort: 80
  - host: bar.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: bar
            servicePort: 80
